<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main_page"
            android:icon="@drawable/ic_main_page"
            android:title="@string/main_page" />

        <item
            android:id="@+id/nav_message"
            android:icon="@drawable/ic_tasks"
            android:title="@string/tasks" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/abc_vector_test"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>