<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="325dp"
    android:layout_height="450dp"
    android:layout_gravity="center"
    tools:context=".ContentPopupScreen">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="310dp"
        android:layout_height="435dp"
        android:background="@color/grey"
        android:backgroundTint="@color/white"
        android:foregroundGravity="center"
        android:transitionName="shared_container"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529" />

    <TextView
        android:id="@+id/taskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TaskName"
        android:textColor="@color/black"
        android:transitionName="transition_text"
        android:translationZ="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/taskSpecifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TaskSpecification"
        android:textColor="@color/black"
        android:translationZ="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/taskCompletion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TaskCompletion"
        android:textColor="@color/black"
        android:translationZ="90dp"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.36" />

    <TextView
        android:id="@+id/taskTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/TaskTime"
        android:textColor="@color/black"
        android:translationZ="90dp"
        app:layout_constraintBottom_toTopOf="@+id/StartTask"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/StartTask"
        android:layout_width="182dp"
        android:layout_height="36dp"
        android:background="@drawable/rectangle_button"
        android:backgroundTint="@color/accent"
        android:text="@string/ButtonTaskStart"
        android:transitionName="transition_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />
</androidx.constraintlayout.widget.ConstraintLayout>