<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_background"
    android:backgroundTint="#FFFFFF"
    tools:context=".TaskCreateScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/createTask"
            android:layout_width="252dp"
            android:layout_height="44dp"
            android:background="@drawable/rectangle_button"
            android:backgroundTint="@color/accent"
            android:onClick="CreateTaskButton"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.794" />

        <EditText
            android:id="@+id/TaskSpecification"
            android:layout_width="220dp"
            android:layout_height="53dp"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/TaskSpecification"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/TimeTask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.773"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/TaskName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:ems="10"
            android:hint="@string/TaskName"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/TaskSpecification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.479"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.643"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/TimeTask"
            android:layout_width="220dp"
            android:layout_height="53dp"
            android:backgroundTint="@color/black"
            android:digits="0123456789."
            android:ems="10"
            android:hint="@string/TaskSpecification"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/createTask"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.882" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_time"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toTopOf="@+id/TimeTask"
            app:layout_constraintStart_toStartOf="@+id/TimeTask" />

        <TextView
            android:id="@+id/textViewSpecification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_specification"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toTopOf="@+id/TaskSpecification"
            app:layout_constraintStart_toStartOf="@+id/TaskSpecification" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:textColor="@color/primary_text"
            app:layout_constraintBottom_toTopOf="@+id/TaskName"
            app:layout_constraintStart_toStartOf="@+id/TaskName" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>