<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue_primary"
    android:fitsSystemWindows="true"
    tools:openDrawer="end">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation"
        tools:ignore="MissingConstraints">

    </com.google.android.material.navigation.NavigationView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="25dp"
                android:paddingVertical="15dp"
                android:text="@string/TaskListNameTextView"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:id="@+id/createTaskTaskList"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="150dp"
                android:background="@drawable/circle_button"
                android:backgroundTint="@color/accent"
                android:onClick="createButton"
                android:text="@string/TextViewCreateButton"
                android:textAlignment="center"
                android:textColor="@color/icons"
                android:textSize="30sp" />

            <Button
                android:id="@+id/deleteButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="-110dp"
                android:background="@drawable/circle_button"
                android:backgroundTint="@color/lighter_blue"
                android:onClick="deleteButton"
                android:text="@string/deleteButtonText"
                android:textAlignment="center"
                android:textColor="@color/icons"
                android:textSize="30sp" />

            <Button
                android:id="@+id/cancelButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:background="@drawable/circle_button"
                android:backgroundTint="@color/red"
                android:onClick="deleteButton"
                android:text="@string/confirmDeleteText"
                android:textAlignment="center"
                android:textColor="@color/icons"
                android:textSize="30sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/confirmDeletionButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="96dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginStart="-160dp"
                android:background="@drawable/circle_button"
                android:backgroundTint="@color/dark_blue_primary"
                android:text="@string/confirmDeletion"
                android:textAlignment="center"
                android:textColor="@color/icons"
                android:textSize="15sp"
                android:visibility="invisible" />
        </LinearLayout>

        <EditText
            android:id="@+id/searchTextView"
            android:layout_width="371dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:autofillHints="no"
            android:background="@drawable/rectangle_button_task_search"
            android:backgroundTint="#E1E1E1"
            android:hint="@string/search"
            android:inputType="textFilter"
            android:paddingHorizontal="8dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#454545" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTasks"
            android:layout_width="match_parent"
            android:layout_height="637dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:foregroundGravity="center"
            android:padding="10dp"
            android:textColor="@color/black"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchTextView"
            app:layout_constraintVertical_bias="1.0" />
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>