<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:drawableTop="@android:color/black"
        android:drawableBottom="@android:color/black"
        android:elevation="3dp"
        android:paddingTop="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="350dp"
                android:layout_height="0.5dp"
                android:layout_gravity="center"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/viewMoreBtn"
                android:layout_width="44dp"
                android:layout_height="43dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/ArrowAnimationImageView"
                android:paddingTop="8dp"
                android:src="@drawable/ic_message"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:tint="@color/accent" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="44dp"
                android:layout_height="43dp"
                android:buttonTint="@color/accent"
                android:text=""
                android:textColor="@color/accent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


            <TextView
                android:id="@+id/taskTitleTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:padding="16dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/TaskName"
                android:textColor="@color/primary_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/expandableLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="1dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/taskTitleTextView">

                <TextView
                    android:id="@+id/taskCompletionTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/TextViewSpecifications"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/TextViewCompleted"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/secondary_text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/statusText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/TextViewStatus"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/status"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/specificationTextTextView"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/PlaceHolderSpecifications"
                    android:textColor="@color/secondary_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/taskCompletionTextView" />

                <Button
                    android:id="@+id/StartTask"
                    android:layout_width="102dp"
                    android:layout_height="32dp"
                    android:layout_marginVertical="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/rectangle_button"
                    android:text="@string/ButtonTaskStart"
                    android:textColor="@color/accent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/specificationTextTextView"
                    app:layout_constraintTop_toBottomOf="@+id/status"
                    app:layout_constraintVertical_bias="0.515" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>